--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -72,14 +72,14 @@ html {
 }
 
 .header-logo {
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: 700;
-    color: black;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 700;
+  color: black;
 }
 
 .header-options {
-  
+
 }
 
 .header-option {
@@ -101,23 +101,30 @@ html {
 }
 
 .splash-content {
-  width: 470px;
-  margin-left: 16%;
-  margin-top: 75px;
+  width: 620px;
+  margin-left: 18%;
+  margin-top: 77px;
 }
 
 .splash-text {
-  font-size: 77px;
+  font-size: 100px;
   line-height: 80px;
   font-weight: 700;
-  @include long-shadow($type: text, $color: #cfd1d3, $length: 500, $fadeout: false, $skew: true, $direction: left);
+  @include long-shadow($type: text, $color: #cfd1d3, $length: 600, $fadeout: false, $skew: true, $direction: left);
 }
 
 .splash-tagline {
-  font-size: 16px;
+  font-size: 20px;
   margin-top: 17px;
 }
 
+.splash-footer {
+  background: white;
+  height: 200px;
+  z-index: 1;
+  position: relative;
+  margin-top: 300px;
+}
 .asterisk {
   color: $magenta;
   text-shadow: none;
@@ -126,9 +133,9 @@ html {
 a.button {
   background: $mintgreen;
   text-decoration: none;
-  padding: 10px 40px;
+  padding: 16px 40px;
   color: white;
-  font-size: 14px;
+  font-size: 16px;
   margin: 10px 0;
   display: inline-block;
   border-radius: 3px;
