--- a/app/assets/stylesheets/api/messages.scss
+++ b/app/assets/stylesheets/api/messages.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the api/messages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.messages {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid;
+}
+
+.message {
+
+}
