Remove BG image

--- a/app/assets/stylesheets/api/chat.scss
+++ b/app/assets/stylesheets/api/chat.scss
@@ -1,5 +1,5 @@
 .chat-container {
-  background: url("https://raw.githubusercontent.com/AdamJacobson/Tension-Chat/master/docs/wireframes/chat-details.png");
+  // background: url("https://raw.githubusercontent.com/AdamJacobson/Tension-Chat/master/docs/wireframes/chat-details.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
