styling for messages

--- a/app/assets/stylesheets/api/messages.scss
+++ b/app/assets/stylesheets/api/messages.scss
@@ -1,10 +1,19 @@
+@import "../utilities/variables";
+
 .messages {
   display: flex;
   flex-direction: column;
   border: 1px solid;
   width: 100%;
+  overflow-y: auto;
 }
 
 .message {
+  margin: 4px;
+}
 
+time {
+  font-style: italic;
+  font-size: 10px;
+  color: $midlightgray;
 }
