Styling for Teams Joining

--- a/app/assets/stylesheets/api/teams.scss
+++ b/app/assets/stylesheets/api/teams.scss
@@ -2,3 +2,17 @@
   border: 1px solid;
   min-width: 225px;
 }
+
+select.team-select {
+  background: white;
+  border: 1px solid black;
+  font-size: 16px;
+  height: 40px;
+  margin-bottom: 18px;
+  text-overflow: ellipsis;
+  width: 55%;
+
+  &:focus {
+    outline: none;
+  }
+}
