--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,9 +1,11 @@
-<% partial = "api/users/user.json.jbuilder" %>
+<% userPartial = "api/users/user.json.jbuilder" %>
+<% teamPartial = "api/teams/team.json.jbuilder" %>
 
 <!-- Bootstrap current user -->
 <script type="text/javascript">
   <% if logged_in? %>
-  window.currentUser = <%= render(partial, user: current_user).html_safe %>
+  window.currentUser = <%= render(userPartial, user: current_user).html_safe %>
+  window.sessionStorage.setItem('team_id', <%= current_team.id %>);
   <% end %>
 </script>
 
