Style tweak to remove random white bars

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -6,7 +6,7 @@
 @import "utilities/mixins";
 
 html {
-  // background: #e3e4e5;
+  background: $lightgray;
   font-family: 'Lato';
   // background-image: url("https://image.ibb.co/cRqoUk/slack_splash.jpg");
   // background-image: url("https://raw.githubusercontent.com/AdamJacobson/Tension-Chat/master/docs/wireframes/login.png");
