--- a/app/assets/stylesheets/api/teams.scss
+++ b/app/assets/stylesheets/api/teams.scss
@@ -6,6 +6,7 @@
 select.team-select {
   background: white;
   border: 1px solid black;
+  border-radius: 5px;
   font-size: 16px;
   height: 40px;
   margin-bottom: 18px;
