Styling for messages

--- a/app/assets/stylesheets/api/messages.scss
+++ b/app/assets/stylesheets/api/messages.scss
@@ -8,6 +8,18 @@
   overflow-y: auto;
 }
 
+.message-content {
+  padding-left: 5px;
+}
+
+.message-body {
+  padding-top: 5px;
+}
+
+.avatar {
+  font-size: 40px;
+}
+
 .message {
   margin: 4px;
 }
