--- a/app/assets/stylesheets/api/messages.scss
+++ b/app/assets/stylesheets/api/messages.scss
@@ -1,11 +1,32 @@
 @import "../utilities/variables";
 
-.messages {
+.messages-container {
   display: flex;
   flex-direction: column;
   border: 1px solid;
   width: 100%;
   overflow-y: auto;
+}
+
+.messages-content {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.messages-list {
+  overflow-y: auto;
+  margin-bottom: 10px;
+}
+
+.message-input {
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 2px solid $darkgray;
+  font-size: 16px;
+  height: 32px;
+  padding-left: 10px;
 }
 
 .message-content {
@@ -14,6 +35,13 @@
 
 .message-body {
   padding-top: 5px;
+}
+
+.message-form {
+
+  button {
+    display: none;
+  }
 }
 
 .avatar {
