App border adjustments

--- a/app/assets/stylesheets/api/header.scss
+++ b/app/assets/stylesheets/api/header.scss
@@ -1,4 +1,6 @@
+@import "../utilities/variables";
+
 .header-container {
-  border: 1px solid;
+  border-bottom: 1px solid $midlightgray;
   height: 60px;
 }
