--- a/app/assets/stylesheets/api/messages.scss
+++ b/app/assets/stylesheets/api/messages.scss
@@ -3,20 +3,18 @@
 .messages-container {
   display: flex;
   flex-direction: column;
-  border: 1px solid;
   width: 100%;
   overflow-y: auto;
 }
 
 .messages-content {
-  margin: 10px;
+  margin: 0 10px 10px 10px;
   display: flex;
   flex-direction: column;
 }
 
 .messages-list {
   overflow-y: auto;
-  margin-bottom: 10px;
 }
 
 .message-input {
