--- a/app/assets/stylesheets/api/header.scss
+++ b/app/assets/stylesheets/api/header.scss
@@ -1,6 +1,6 @@
 @import "../utilities/variables";
 
 .header-container {
-  border-bottom: 1px solid $midlightgray;
+  border-bottom: 1px solid $borderLight;
   height: 60px;
 }
