--- a/app/assets/stylesheets/utilities/_variables.scss
+++ b/app/assets/stylesheets/utilities/_variables.scss
@@ -2,6 +2,12 @@ $lightgray: #f9f9f9;
 $midlightgray: #c3c4c5;
 $mediumgray: #5a5a5a;
 $darkgray: #2f2f2f;
+
 $mintgreen: #42c299;
 $mintgreenshadow: #309272;
 $magenta: #e32072;
+
+$borderLight: #c3c4c5;
+
+$textFocus: #383F45;
+$textBlur: #c3c4c5;
