--- a/app/assets/stylesheets/api/info.scss
+++ b/app/assets/stylesheets/api/info.scss
@@ -1,4 +1,6 @@
+@import '../utilities/variables';
+
 .info-container {
-  border: 1px solid;
+  border-left: 1px solid $midlightgray;
   width: 600px;
 }
