--- a/app/assets/stylesheets/api/messages.scss
+++ b/app/assets/stylesheets/api/messages.scss
@@ -21,7 +21,7 @@
   width: 100%;
   box-sizing: border-box;
   border-radius: 5px;
-  border: 2px solid $darkgray;
+  border: 2px solid $borderLight;
   font-size: 16px;
   height: 32px;
   padding-left: 10px;
@@ -53,5 +53,5 @@
 time {
   font-style: italic;
   font-size: 10px;
-  color: $midlightgray;
+  color: $textBlur;
 }
