--- a/app/assets/stylesheets/api/teams.scss
+++ b/app/assets/stylesheets/api/teams.scss
@@ -2,6 +2,7 @@
 
 h3 {
   font-size: 20px;
+  font-weight: bold;
 }
 
 h4 {
@@ -9,7 +10,19 @@ h4 {
 }
 
 .channel-group {
-  margin: 30px 0;
+  margin: 40px 0;
+}
+
+.channel-list {
+  padding: 0 6px;
+}
+
+.channel-item {
+  margin: 8px 0;
+}
+
+.channel-link {
+  color: $textFocus;
 }
 
 .team-container {
@@ -32,6 +45,12 @@ h4 {
 .username {
   color: $mediumgray;
   padding: 0 5px;
+  display: inline-block;
+  margin: 5px 0;
+}
+
+.user-status {
+  font-size: 14px;
 }
 
 select.team-select {
@@ -40,7 +59,7 @@ select.team-select {
   border-radius: 5px;
   font-size: 16px;
   height: 40px;
-  margin-bottom: 18px;
+  margin: 11px 16px;
   text-overflow: ellipsis;
   width: 55%;
 
