--- a/app/assets/stylesheets/api/teams.scss
+++ b/app/assets/stylesheets/api/teams.scss
@@ -9,6 +9,10 @@ h4 {
   font-size: 15px;
 }
 
+.clickable {
+  cursor: pointer;
+}
+
 .active {
   background: $mediumgray;
   color: $textBlur !important;
