--- a/app/assets/stylesheets/api/channels.scss
+++ b/app/assets/stylesheets/api/channels.scss
@@ -79,8 +79,8 @@ input {
   border: none;
   position: absolute;
   outline: none;
-  right: 5%;
-  top: 5%;
+  right: 0;
+  top: 0;
 }
 
 small {
@@ -114,7 +114,8 @@ small {
 
 .channel-buttons {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
+  flex-direction: row-reverse;
 }
 
 .button-cancel {
