--- a/app/assets/stylesheets/api/messages.scss
+++ b/app/assets/stylesheets/api/messages.scss
@@ -45,6 +45,7 @@
 
 .message-body {
   padding-top: 5px;
+  color: $darkgray;
 }
 
 .message-form {
@@ -76,7 +77,7 @@
 }
 
 .message {
-  padding: 5px 20px;
+  padding: 6px 20px;
 
   &:hover {
     background: $lightgray
@@ -84,7 +85,7 @@
 }
 
 time {
-  font-style: italic;
+  padding-left: 10px;
   font-size: 10px;
   color: $textBlur;
 }
