--- a/app/assets/stylesheets/api/teams.scss
+++ b/app/assets/stylesheets/api/teams.scss
@@ -51,3 +51,53 @@ select.team-select {
     outline: none;
   }
 }
+
+.dropdown {
+  display: none;
+}
+
+.dropdown-mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.dropdown-content {
+  width: 200px;
+  z-index: 1;
+  position: absolute;
+  background: white;
+  border-radius: 6px;
+  border: 1px solid $borderLight;
+}
+
+.dropdown-section {
+  padding: 10px;
+}
+
+.fill {
+  width: 100%;
+  display: block;
+}
+
+.dropdown-item {
+  padding: 4px;
+  border-radius: 6px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #2D9EE0;
+    color: $lightgray;
+  }
+}
+
+.show {
+  display: block;
+}
+
+.divider {
+  height: 1px;
+  border-top: 1px solid $borderLight;
+}
