Fixed message form bug for Safari

--- a/app/assets/stylesheets/api/messages.scss
+++ b/app/assets/stylesheets/api/messages.scss
@@ -52,7 +52,10 @@
   margin: 0 20px 20px 20px;
 
   button {
-    display: none;
+    visibility: hidden;
+    position: fixed;
+    width: 0;
+    height: 0;
   }
 }
 
