Fixed direct message list highlighting

--- a/app/assets/stylesheets/api/channels.scss
+++ b/app/assets/stylesheets/api/channels.scss
@@ -51,7 +51,14 @@ input {
 }
 
 .channel-link {
-  // color: $textFocus;
+  display: flex;
+  justify-content: space-between;
+}
+
+.unread {
+  border-radius: 6px;
+  background: salmon;
+  padding: 0 4px;
 }
 
 .channel-type-header {
